manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: myapi 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapi
  template:
    metadata:
      labels:
        app: myapi 
    spec:
      containers:
        - name: myapi 
          image: acrdevuks.azurecr.io/myapi
          ports:
          - containerPort: 8080
