manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: myapi
spec:
    type: ClusterIP
    ports:
    - port: 80
      targetPort: 8080 
    selector:
        app: myapi
